fix photo spacing on ipad horizontal view

--- a/style.css
+++ b/style.css
@@ -400,6 +400,12 @@ span.new-snowflake {
   box-shadow: 2px 2px 5px rgb(var(--secondary-bg-color));
 }
 
+@media (min-width: 768px) and (min-height: 1024px) {
+  #slideshow-images {
+    max-height: 60vh;
+  }
+}
+
 .page-links {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
